# BasicModules_CMake

./: CMakeLists.txt  CMakePresets.json  README.md
BasicModules_CMake/: BasicModules_CMake.cpp  CMakeLists.txt
BasicModules_CMake/Hello/: CMakeLists.txt  Hello.cxx
BasicModules_CMake/Hello/HelloVariables/: CMakeLists.txt  HelloVariables.cxx  Who.cxx
BasicModules_CMake/Input/: CMakeLists.txt  Input.cxx
BasicModules_CMake/Input/Variables/: CMakeLists.txt  Hidden.cxx  Variables.cxx
BasicModules_CMake/Run/: CMakeLists.txt  Run.cxx
