cmake_minimum_required(VERSION 3.40)

cmake_path(GET CMAKE_CURRENT_SOURCE_DIR FILENAME PACKAGE_NAME)
project(${PACKAGE_NAME})

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_SCAN_FOR_MODULES TRUE)

add_subdirectory(${CMAKE_PROJECT_NAME} ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_PROJECT_NAME})
